# ic_blog

./: .gitignore  README.md
NNS 系列/: Archive-node.md  Cycles-minting.md  DataStruct.pptx  Genesis-token.md  Governance.md  Identity.md  Ledger.md  Lifeline.md  NNS-ui.md  README.md  Registry.md  Root.md
NNS 系列/code/governance_subaccount/: Cargo.toml
NNS 系列/code/governance_subaccount/src/: main.rs
code/: canister.txt  canister_raw.txt
code/principal/: Cargo.toml
code/principal/src/: main.rs
code/registry_get_value/: Cargo.toml
code/registry_get_value/src/: main.rs
