[package]
name = "registry_get_value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
ic-protobuf = { git="https://github.com/dfinity/ic" }
ic-types = { git="https://github.com/dfinity/ic" }
prost = "0.9.0"
candid = "0.7.10"