[package]
name = "governance_subaccount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-types = { git="https://github.com/dfinity/ic" }
ledger-canister = { git="https://github.com/dfinity/ic" }
ic-crypto-sha = { git="https://github.com/dfinity/ic" }
candid = "0.7.10"